--- a/gettingclose.html
+++ b/gettingclose.html
@@ -135,7 +135,9 @@ In 2015, Rita Felski's book The Limits of Critique came out and galvanized part 
 	<br>
 (You see what I am doing here, I hope that one book unfolds to another, and yet another. We begin, then, in flight. We begin with the interlaced making of belonging.)
 </p>
+<a href="othering.html">
 <p id="number">4</p>
+</a>
 </div>
 <!-- <span class="dot"></span>
 <span class="dot"></span>
