--- a/othering.html
+++ b/othering.html
@@ -134,7 +134,9 @@ The French philosopher Jacques Derrida asks: What constitutes an "other?" Notice
 	<br>
 Read this book pages at a time, in the earliest morning you can find.
 </p>
+<a href="resisting.html">
 <p id="number">6</p>
+</a>
 </div>
 <!-- <span class="dot"></span>
 <span class="dot"></span>
