--- a/resisting.html
+++ b/resisting.html
@@ -139,7 +139,9 @@ As I approach the end of my doctoral program (and thus my debut on the job marke
 	<br>
 Whether for Du Bois life work (or lifework?) is defined as the main work we carry out over a lifetime, or perhaps is closer to a sense of purpose, a strengthening of character, and a spiritual awakening, the significance of work remains. This holds true whether it alludes to church women amassing millions of dollars in property to support their communities, or anti slavery leaders like Mary Ann Shadd, Harriet Tubman, or Sojourner Truth pursuing activism. "Not being expected to be merely ornamental, [women] have girded themselves for work, instead of adoring their bodies only for play," Du Bois writes.
 </p>
+<a href="end.html">
 <p id="number">8</p>
+</a>
 </div>
 <!-- <span class="dot"></span>
 <span class="dot"></span>
