--- a/unraveling.html
+++ b/unraveling.html
@@ -142,7 +142,9 @@ Even with the reasonable knowledge of the resources at my disposal, I find it ha
 	<br>
 In no particular order, then, here is a small library of reading materials that have, in recent times, kept me going. My point here is not that you take each selection as a kind of what to read guide, but rather as a case study, or an invitation to move through and around these particular texts (or other texts altogether) in your own way. Each opens up to a whole new reading list and a whole new way to relate to yourself, and to your creative life if you let it.
 </p>
+<a href="gettingclose.html">
 <p id="number">2</p>
+</a>
 </div>
 <!-- <span class="dot"></span>
 <span class="dot"></span>
