--- a/gettingclose.html
+++ b/gettingclose.html
@@ -179,9 +179,9 @@ src: url("BigCaslonRegular.otf");
 
 	<br>
 	<br>
-Writers are often stereotyped as anti social people who are hard to get close to. Most days, I want intimacy so badly I could die. Maybe this is why, after 10 years of publishing my writing, I still do not consider myself a writer. I can not relate.
+Writers are often stereotyped as anti social people who are hard to get close to. Most days, I want intimacy so badly <br> I could die. Maybe this is why, after 10 years of publishing my writing, I still do not consider myself a writer. <br>I can not relate.
 <br>
-In the 2013 book The Undercommons: Fugitive Planning & Black Study, Stefano Harney and Fred Moten write that “critique endangers the sociality it is supposed to defend.” This is a line I have memorized for its ability to capture how language can form us while simultaneously creating boundaries that make us more isolated.
+In the 2013 book The Undercommons: Fugitive Planning <br> & Black Study, Stefano Harney and Fred Moten write that “critique endangers the sociality it is supposed to defend.” This is a line I have memorized for its ability to capture how language can form us while simultaneously creating boundaries that make us more isolated.
 <br> 
 In 2015, Rita Felski's book The Limits of Critique came out and galvanized part of a larger discussion on what it means to read. Western literary critics in the post war period, she argues, tend to favor what Paul Ricoeur calls a "hermeneutics of suspicion," or, a mode of interpretation akin to a detective trying to solve a crime. What is the difference between reading and critique? If, for Felski, critique has some kind of end goal, perhaps reading takes the long road.
 
@@ -192,7 +192,7 @@ In 2015, Rita Felski's book The Limits of Critique came out and galvanized part 
 <div class="page5">
 <p id="text">For a living (or, for a modest stipend), I am a literary critic in training, which is a fancy way of saying that I am a graduate student in English and Comparative Literature at an institution that provides funding in exchange for labor. I am also a writer and editor, which means my relationship to reading is often transactional. I am looking for an argument, a quote, a line to tweet. But I came to Felski again by way of David Scott's 2017 book, Stuart Hall's Voice: Intimations of an Ethics of Receptive Generosity, which emphasizes how learning is really about opening yourself up. Scott's language is a reminder that you do not always have to get something out of a text to become close with what it has to offer.
 	<br>
-(You see what I am doing here, I hope that one book unfolds to another, and yet another. We begin, then, <br>in flight. We begin with the interlaced making <br>of belonging.)
+(You see what I am doing here, I hope that one book unfolds to another, and yet another. We begin, then, in flight. <br> We begin with the interlaced making of belonging.)
 </p>
 <a href="othering.html">
 <p id="number">4</p>
