--- a/end.html
+++ b/end.html
@@ -150,7 +150,7 @@ top:0%;
 	position: absolute;
 	font-size: 40px;
 	
-	color: #003f66;
+	color: var(--fourth-color);
 	
 }
 #head2{font-family: myFirstFont;
@@ -161,7 +161,7 @@ left: 70%;
 	transform: skewX(0.001deg);
 	 transition: transform .3s ease-in-out;
 	
-	color: #003f66;
+	color: var(--fourth-color);
 }
 
 #head3{font-family: myFirstFont;
@@ -178,7 +178,7 @@ left: 70%;
 	text-align: left;
 	font-size: 20px;
 line-height: 1.5;
-color: #003f66;}
+color: var(--fourth-color);}
 
 /*#text2{font-family: myFirstFont;
 	transform: skewX(0.001deg);
